<resources>
    <string name="app_name">LANChat</string>
    <string name="lets_chat">Let\'s Chat</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="write_your_message">Write your message</string>
    <string name="chatview">Chatview</string>
    <string name="save">Save</string>
    <string name="server_address">Server Address</string>
    <string name="username">Username</string>
    <string name="CID">LANChat_Channel</string>
    <string name="CNAME">LANChat Notifications</string>
    <string name="CDESC">A Channel for LANChat</string>
</resources>